# AuDHD_Correlation_Study

./: .env.example  .gitignore  CHECK_DOWNLOADS.sh  Makefile  PROJECT_PLAN.md  README.md  TRACKER_DASHBOARD.html  pyproject.toml
.github/workflows/: ci.yml  tests.yml
FINAL_SUBMISSION_PACKAGE_V3/: README.md  biological_systems.md  biological_systems.tex  manuscript.md  manuscript_v3_formatted.tex  mathematical_framework.md  mathematical_framework.tex
configs/: README.md  config.yaml  defaults.yaml  download_config.yaml  minimal.yaml  monitoring_config.yaml  pipeline.yaml  prenatal_mappings.yaml  reference_paths.yaml  ukb_extraction_config.yaml
configs/biological/: full.yaml  minimal.yaml
configs/causal/: full.yaml
configs/cluster/: hdbscan.yaml
configs/clustering/: hdbscan.yaml  kmeans.yaml
configs/compute/: cloud.yaml  hpc.yaml  local.yaml
configs/data/: base.yaml  minimal.yaml  spark.yaml
configs/datasets/: abcd.yaml  spark.yaml  ukb.yaml
configs/experiment/: default.yaml  high_resolution.yaml  quick_test.yaml
configs/features/: extended.yaml  full.yaml
configs/integrate/: mofa2.yaml
configs/integration/: mofa.yaml  pca.yaml
configs/preprocess/: standard.yaml
configs/preprocessing/: PREPROCESSING_ORDER.md  minimal.yaml  standard.yaml
configs/report/: clinical.yaml
configs/reporting/: clinical.yaml  research.yaml
configs/sweep/: clustering_optimization.yaml  integration_optimization.yaml  optuna_clustering.yaml  preprocessing_optimization.yaml
configs/validate/: comprehensive.yaml
configs/validation/: comprehensive.yaml  quick.yaml
configs/visualization/: publication.yaml  standard.yaml
configs/viz/: interactive.yaml
dashboards/: data_explorer.html
data/abcd/: imaging_metrics_extracted.csv  phenotype_mapping.json
data/biobanks/: BIOBANK_DISCOVERY_REPORT.md  biobank_catalog.json  (+2 more)
docker/: Dockerfile
docs/: ADAPTIVE_WEIGHTING.md  ADVANCED_METHODS.md  CONFIGURATION_GUIDE.md  DATA_ACCESS_GUIDE.md  DATA_ACCESS_WORKFLOW.md  DOCUMENTATION_SUMMARY.md  EXTENDED_CAUSAL_ANALYSIS.md  GENETIC_ANALYSIS_SYSTEM.md  ITERATIVE_REFINEMENT.md  Makefile  NEW_MODULES_SUMMARY.md  PAPER_SCRAPING_SYSTEM.md  PRENATAL_MATERNAL_HEALTH.md  PROJECT_PLAN.md  PROMPT_1_2_SUMMARY.md  PROMPT_1_3_SUMMARY.md  PROMPT_2_1_SUMMARY.md  PROMPT_2_2_SUMMARY.md  PROMPT_2_3_SUMMARY.md  PROMPT_3_1_SUMMARY.md  PROMPT_3_2_SUMMARY.md  PUBLIC_DATA_PLAN.md  README.md  TOPOLOGY_IDEAS.md  best_practices.rst  clustering_complete_guide.md  clustering_configuration.md  conf.py  configuration.rst  data_sources.md  embedding_contracts.md  faq.rst  index.rst  installation.rst  integration_to_clustering_workflow.md  mofa_dependency_notes.md  quickstart.rst  requirements.txt  troubleshooting.rst  validation_metric_names.md
notebooks/: 01_complete_workflow.ipynb
scripts/: analysis_pipeline.py  analyze_genes.py  comprehensive_download.sh  create_demo_data.py  deep_phenotype_miner.py  discover_biobanks.py  discover_extended_data.py  download_all_public_data.py  download_everything.sh  download_geo.py  download_nhanes_environmental.py  download_sra_batch.py  download_tracker.py  expanded_paper_queries.py  extract_data_repos.py  fetch_citations_robust.py  link_environmental_data.py  run_analysis_adjusted.py  run_analysis_demo.py  run_analysis_real_data.py  run_full_analysis.py  run_integrated_analysis.py  run_pipeline.py  scrape_papers.py  scrape_papers_enhanced.py  simple_snp_annotation.py  sort_and_extract_papers.py  test_config_system.sh  unified_pipeline_runner.py  validate_all_configs.py  validate_config.py
tests/: conftest.py  test_advanced_features.py  test_batch_correction.py  test_biological.py  test_causal.py  test_clustering.py  test_config.py  test_config_loader.py  test_data_loaders.py  test_explainability.py  test_external_validation.py  test_imputation.py  test_integration.py  test_ontology.py  test_preprocess.py  test_reporting.py  test_topology.py  test_utils.py  test_validation.py  test_validation_report.py  test_viz.py
(+313 files in other folders)
